--- a/default.yaml
+++ b/default.yaml
@@ -1,2 +1,4 @@
 mp3d_habitat_scene_dataset_path: ""
-default_save_path : ""
+default_gml_save_path : ""
+default_img_save_path : ""
+datasets_path: ""
